TestRepo2/src/objects/State_Code__c.object
<CustomObject>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_Prod_ID__c</fullName>
        <label>New Prod ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SK3_ID__c</fullName>
        <label>SK3 ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <externalId>true</externalId>
        <label>State Code</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Desc__c</fullName>
        <label>State Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>State Code</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>